--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,8 @@
   top: 10px;
   left: 0;
   right: 0;
-  margin: 0 auto;
+  margin-left: -10px;
+  margin-top: -10px;
   width: 100%;
   max-width: 100%;
   background-color: white;
